docs/api/qiskit/0.43/qiskit.algorithms.optimizers.SNOBFIT.md
---
title: SNOBFIT
description: API reference for qiskit.algorithms.optimizers.SNOBFIT
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.SNOBFIT
---

# SNOBFIT

<span id="qiskit.algorithms.optimizers.SNOBFIT" />

`SNOBFIT(maxiter=1000, maxfail=10, maxmp=None, verbose=False)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/snobfit.py "view source code")

Bases: [`Optimizer`](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.optimizer.Optimizer")

Stable Noisy Optimization by Branch and FIT algorithm.

SnobFit is used for the optimization of derivative-free, noisy objective functions providing robust and fast solutions of problems with continuous variables varying within bound.

Uses skquant.opt installed with pip install scikit-quant. For further detail, please refer to [https://github.com/scikit-quant/scikit-quant](https://github.com/scikit-quant/scikit-quant) and [https://qat4chem.lbl.gov/software](https://qat4chem.lbl.gov/software).

**Parameters**

*   **maxiter** (*int*) – Maximum number of function evaluations.
*   **maxmp** (*int*) – Maximum number of model points requested for the local fit. Default = 2 \* number of parameters + 6 set to this value when None.
*   **maxfail** (*int*) – Maximum number of failures to improve the solution. Stops the algorithm after maxfail is reached.
*   **verbose** (*bool*) – Provide verbose (debugging) output.

**Raises**

*   **MissingOptionalLibraryError** – scikit-quant or SQSnobFit not installed
*   **QiskitError** – If NumPy 1.24.0 or above is installed. See [https://github.com/scikit-quant/scikit-quant/issues/24](https://github.com/scikit-quant/scikit-quant/issues/24) for more details.

## Methods

<span id="qiskit-algorithms-optimizers-snobfit-get-support-level" />

### get\_support\_level

<span id="qiskit.algorithms.optimizers.SNOBFIT.get_support_level" />

`SNOBFIT.get_support_level()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/snobfit.py "view source code")

Returns support level dictionary.

<span id="qiskit-algorithms-optimizers-snobfit-gradient-num-diff" />

### gradient\_num\_diff

<span id="qiskit.algorithms.optimizers.SNOBFIT.gradient_num_diff" />

`static SNOBFIT.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=None)`

We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

**Parameters**

*   **x\_center** (*ndarray*) – point around which we compute the gradient
*   **f** (*func*) – the function of which the gradient is to be computed.
*   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
*   **max\_evals\_grouped** (*int*) – max evals grouped, defaults to 1 (i.e. no batching).

**Returns**

the gradient computed

**Return type**

grad

<span id="qiskit-algorithms-optimizers-snobfit-minimize" />

### minimize

<span id="qiskit.algorithms.optimizers.SNOBFIT.minimize" />

`SNOBFIT.minimize(fun, x0, jac=None, bounds=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/snobfit.py "view source code")

Minimize the scalar function.

**Parameters**

*   **fun** (*Callable\[\[POINT], float]*) – The scalar function to minimize.
*   **x0** (*POINT*) – The initial point for the minimization.
*   **jac** (*Callable\[\[POINT], POINT] | None*) – The gradient of the scalar function `fun`.
*   **bounds** (*list\[tuple\[float, float]] | None*) – Bounds for the variables of `fun`. This argument might be ignored if the optimizer does not support bounds.

**Returns**

The result of the optimization, containing e.g. the result as attribute `x`.

**Return type**

[OptimizerResult](qiskit.algorithms.optimizers.OptimizerResult "qiskit.algorithms.optimizers.OptimizerResult")

<span id="qiskit-algorithms-optimizers-snobfit-print-options" />

### print\_options

<span id="qiskit.algorithms.optimizers.SNOBFIT.print_options" />

`SNOBFIT.print_options()`

Print algorithm-specific options.

<span id="qiskit-algorithms-optimizers-snobfit-set-max-evals-grouped" />

### set\_max\_evals\_grouped

<span id="qiskit.algorithms.optimizers.SNOBFIT.set_max_evals_grouped" />

`SNOBFIT.set_max_evals_grouped(limit)`

Set max evals grouped

<span id="qiskit-algorithms-optimizers-snobfit-set-options" />

### set\_options

<span id="qiskit.algorithms.optimizers.SNOBFIT.set_options" />

`SNOBFIT.set_options(**kwargs)`

Sets or updates values in the options dictionary.

The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

**Parameters**

**kwargs** (*dict*) – options, given as name=value.

<span id="qiskit-algorithms-optimizers-snobfit-wrap-function" />

### wrap\_function

<span id="qiskit.algorithms.optimizers.SNOBFIT.wrap_function" />

`static SNOBFIT.wrap_function(function, args)`

Wrap the function to implicitly inject the args at the call of the function.

**Parameters**

*   **function** (*func*) – the target function
*   **args** (*tuple*) – the args to be injected

**Returns**

wrapper

**Return type**

function\_wrapper

## Attributes

<span id="qiskit.algorithms.optimizers.SNOBFIT.bounds_support_level" />

### bounds\_support\_level

Returns bounds support level

<span id="qiskit.algorithms.optimizers.SNOBFIT.gradient_support_level" />

### gradient\_support\_level

Returns gradient support level

<span id="qiskit.algorithms.optimizers.SNOBFIT.initial_point_support_level" />

### initial\_point\_support\_level

Returns initial point support level

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_bounds_ignored" />

### is\_bounds\_ignored

Returns is bounds ignored

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_bounds_required" />

### is\_bounds\_required

Returns is bounds required

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_bounds_supported" />

### is\_bounds\_supported

Returns is bounds supported

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_gradient_ignored" />

### is\_gradient\_ignored

Returns is gradient ignored

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_gradient_required" />

### is\_gradient\_required

Returns is gradient required

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_gradient_supported" />

### is\_gradient\_supported

Returns is gradient supported

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_initial_point_ignored" />

### is\_initial\_point\_ignored

Returns is initial point ignored

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_initial_point_required" />

### is\_initial\_point\_required

Returns is initial point required

<span id="qiskit.algorithms.optimizers.SNOBFIT.is_initial_point_supported" />

### is\_initial\_point\_supported

Returns is initial point supported

<span id="qiskit.algorithms.optimizers.SNOBFIT.setting" />

### setting

Return setting

<span id="qiskit.algorithms.optimizers.SNOBFIT.settings" />

### settings

